project/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment-account
  labels:
    app: project-app-k8s-a

spec:
  replicas: 1
  selector:
    matchLabels:
      env: project-account
  template:
    metadata:
      labels:
        env: project-account
    spec:
      containers:
      - name : project-account-service
        image: pisklovcor/project-account-docker:dockerfile
        ports:
          - containerPort: 8001
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment-library
  labels:
    app: project-app-k8s-s

spec:
  replicas: 1
  selector:
    matchLabels:
      env: project-library
  template:
    metadata:
      labels:
        env: project-library
    spec:
      containers:
        - name : project-library-service
          image: pisklovcor/project-library-docker:dockerfile
          ports:
            - containerPort: 8000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment-notification
  labels:
    app: project-app-k8s-s

spec:
  replicas: 1
  selector:
    matchLabels:
      env: project-notification
  template:
    metadata:
      labels:
        env: project-notification
    spec:
      containers:
        - name : project-notification-service
          image: pisklovcor/project-notification-docker:dockerfile
          ports:
            - containerPort: 8003
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment-order
  labels:
    app: project-app-k8s-s

spec:
  replicas: 1
  selector:
    matchLabels:
      env: project-order
  template:
    metadata:
      labels:
        env: project-order
    spec:
      containers:
        - name : project-order-service
          image: pisklovcor/project-order-docker:dockerfile
          ports:
            - containerPort: 8002
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: project-postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      env: postgres-project
  template:
    metadata:
      labels:
        env: postgres-project
    spec:
      containers:
        - name  : postgres-13
          image : postgres:13.3
          ports :
            - containerPort: 5432
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jms-broker
  labels:
    app: project-jms-broker

spec:
  replicas: 1
  selector:
    matchLabels:
      env: jms-broker-project
  template:
    metadata:
      labels:
        env: jms-broker-project
    spec:
      containers:
        - name  : project-broker
          image : vromero/activemq-artemis:2.10.1
          ports :
            - containerPort: 61616
