project/manifest/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress-auth
  annotations:
    kubernetes.io/ingress.class                       : nginx
    nginx.ingress.kubernetes.io/use-regex             : "true"
    nginx.ingress.kubernetes.io/auth-response-headers : "X-Account-Id,X-User,X-Email,X-First-Name,X-Last-Name"

spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/account/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: project-service-account
                port:
                  number: 80
